--- a/css/style.css
+++ b/css/style.css
@@ -1446,6 +1446,81 @@ i:before {
 /* End Static Area css
 ============================================================================================ */
 /*---------------------------------------------------- */
+
+/* People Area css
+============================================================================================ */
+.people_area {
+  padding: 100px 0px;
+}
+
+.people_main_content {
+  position: relative;
+}
+.people_lawyer_item {
+  -webkit-transition: all 400ms linear 0s;
+  -o-transition: all 400ms linear 0s;
+  transition: all 400ms linear 0s;
+}
+
+.people_area_lawyer_item .people_lawyer_img {
+  overflow: hidden;
+}
+
+.people_lawyer_item .people_lawyer_img a {
+  display: block;
+}
+
+.people_lawyer_item .people_lawyer_img img {
+  -webkit-transition: all 400ms linear 0s;
+  -o-transition: all 400ms linear 0s;
+  transition: all 400ms linear 0s;
+}
+
+.people_lawyer_item .people_lawyer_img img:hover {
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
+.people_lawyer_item .people_lawyer_content {
+  border: 1px solid #ebebeb;
+  border-top: 0px;
+  padding: 30px 35px;
+}
+
+.people_lawyer_item .people_lawyer_content h4 {
+  font-size: 18px;
+  color: #232d37;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  -webkit-transition: all 400ms linear 0s;
+  -o-transition: all 400ms linear 0s;
+  transition: all 400ms linear 0s;
+}
+
+.people_lawyer_item .people_lawyer_content h4:hover {
+  color: #005f99;
+}
+
+.people_lawyer_item .people_lawyer_content p {
+  font-size: 14px;
+  line-height: 26px;
+  color: #51545f;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  padding: 15px 0px 10px 0px;
+}
+
+.people_lawyer_item:hover {
+  -webkit-box-shadow: 0px 25px 49px 0px rgba(58, 74, 88, 0.1);
+  box-shadow: 0px 25px 49px 0px rgba(58, 74, 88, 0.1);
+}
+
+
+/* End People Area css
+============================================================================================ */
+/*---------------------------------------------------- */
+
 /*----------------------------------------------------*/
 /* Contact Us Area css
 ============================================================================================ */
